--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -40,63 +40,59 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3 q3__content__rightbox">
           <table>
-            <thead>
-                <th>日付</th>
-                <th>朝ごはん</th>
-                <th>昼ごはん</th>
-                <th>おやつ</th>
-                <th>夜ごはん</th>
-                <th>夜食</th>
-            </thead>
-            
-            <tbody>
-              <tr>
-                <td>2016/04/01</td>
-                <td>食パン</td>
-                <td>チャーハン</td>
-                <td>杏仁豆腐</td>
-                <td>舞茸丼</td>
-                <td>いちご</td>
-              </tr>
+            <tr>
+              <th>日付</th>
+              <th>朝ごはん</th>
+              <th>昼ごはん</th>
+              <th>おやつ</th>
+              <th>夜ごはん</th>
+              <th>夜食</th>
+            </tr>    
 
-              <tr>
-                <td>2016/04/02</td>
-                <td class="cell_gray">なし</td>
-                <td class="cell_gray">ケバブ丼</td>
-                <td class="cell_gray">ゼリー</td>
-                <td class="cell_gray">唐揚げ丼</td>
-                <td class="cell_gray">いちご</td>
-              </tr>
+            <tr>
+              <td>2016/04/01</td>
+              <td>食パン</td>
+              <td>チャーハン</td>
+              <td>杏仁豆腐</td>
+              <td>舞茸丼</td>
+              <td>いちご</td>
+            </tr>
 
-              <tr>
-                <td>2016/04/03</td>
-                <td>納豆ご飯</td>
-                <td>まぐろ定食</td>
-                <td>チョコパン</td>
-                <td>餃子定食</td>
-                <td>チョコ</td>
-              </tr>
+            <tr>
+              <td>2016/04/02</td>
+              <td>なし</td>
+              <td>ケバブ丼</td>
+              <td>ゼリー</td>
+              <td>唐揚げ丼</td>
+              <td>いちご</td>
+            </tr>
 
-              <tr>
-                <td>2016/04/04</td>
-                <td class="cell_gray">食パン</td>
-                <td class="cell_gray">牛丼</td>
-                <td class="cell_gray">アイス</td>
-                <td class="cell_gray">豚丼</td>
-                <td class="cell_gray">スムージー</td>
-              </tr>
-            </tbody>
+            <tr>
+              <td>2016/04/03</td>
+              <td>納豆ご飯</td>
+              <td>まぐろ定食</td>
+              <td>チョコパン</td>
+              <td>餃子定食</td>
+              <td>チョコ</td>
+            </tr>
 
-            <tfoot>
-              <tr class="last_line">
-                <td>合計カロリー</td>
-                <td>10000kal</td>
-                <td>12000kal</td>
-                <td>3000kal</td>
-                <td>30000kal</td>
-                <td>1000kal</td>
-              </tr>
-            </tfoot>
+            <tr>
+              <td>2016/04/04</td>
+              <td>食パン</td>
+              <td>牛丼</td>
+              <td>アイス</td>
+              <td>豚丼</td>
+              <td>スムージー</td>
+            </tr>
+
+            <tr>
+              <td>合計カロリー</td>
+              <td>10000kal</td>
+              <td>12000kal</td>
+              <td>3000kal</td>
+              <td>30000kal</td>
+              <td>1000kal</td>
+            </tr>
           </table>
         </div>
         <!-- 回答はクラスq3の要素の中に書いてね -->
