--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,7 +41,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
+              <div class="align">
                 <p>text-align</p>
               </div>
             </div>
@@ -54,7 +54,9 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <div class="margin">
+                <p>margin</p>
+              </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -85,8 +87,10 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+            <div class="q6--around__table">
+              <div class="q6--around__element">
+                <p>table</p>
+              </div>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -115,7 +119,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+              <p class="q6__box__inner stable">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
             <!--
@@ -129,7 +133,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+              <p class="q6__box__inner flexible">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
