--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -39,18 +39,18 @@
         <!-- 回答はクラスq3の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3 q3__content__rightbox">
-          <table>
+          <table class="q3__content">
             <tr>
               <th>日付</th>
               <th>朝ごはん</th>
               <th>昼ごはん</th>
               <th>おやつ</th>
-              <th>夜ごはん</th>
+              <th>夜ご飯</th>
               <th>夜食</th>
             </tr>    
 
             <tr>
-              <td>2016/04/01</td>
+              <th>2016/04/01</th>
               <td>食パン</td>
               <td>チャーハン</td>
               <td>杏仁豆腐</td>
@@ -59,16 +59,16 @@
             </tr>
 
             <tr>
-              <td>2016/04/02</td>
+              <th>2016/04/02</th>
               <td>なし</td>
               <td>ケバブ丼</td>
               <td>ゼリー</td>
-              <td>唐揚げ丼</td>
+              <td>唐揚げ定食</td>
               <td>いちご</td>
             </tr>
 
             <tr>
-              <td>2016/04/03</td>
+              <th>2016/04/03</th>
               <td>納豆ご飯</td>
               <td>まぐろ定食</td>
               <td>チョコパン</td>
@@ -77,7 +77,7 @@
             </tr>
 
             <tr>
-              <td>2016/04/04</td>
+              <th>2016/04/04</th>
               <td>食パン</td>
               <td>牛丼</td>
               <td>アイス</td>
@@ -86,12 +86,12 @@
             </tr>
 
             <tr>
-              <td>合計カロリー</td>
-              <td>10000kal</td>
-              <td>12000kal</td>
-              <td>3000kal</td>
-              <td>30000kal</td>
-              <td>1000kal</td>
+              <th>合計カロリー</th>
+              <td>10000kcal</td>
+              <td>12000kcal</td>
+              <td>3000kcal</td>
+              <td>30000kcal</td>
+              <td>1000kcal</td>
             </tr>
           </table>
         </div>
