--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,15 +33,17 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4_box">
-          <div class="orange">固定</div>
-          <div class="pink">可変</div>
-          <div class="blue">固定</div>
-        </div>
-        <div class="q4_box">
-          <div class="yellow">可変</div>
-          <div class="red">可変</div>
-          <div class="green">固定</div>
+        <div class="q4">
+          <div class="q4__contents">
+            <div class="q4__cell orange">固定</div>
+            <div class="q4__cell pink">可変</div>
+            <div class="q4__cell blue">固定</div>
+          </div>
+          <div class="q4__contents">
+            <div class="q4__cell yellow">可変</div>
+            <div class="q4__cell red">可変</div>
+            <div class="q4__cell green">固定</div>
+          </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
       </div>
