Q8 ボタンの共通CSSをまとめる

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -32,26 +32,26 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q8 q8--btn">
             <p class="q8__title">ー small ー</p>
-            <div class="q8__btn small common_small">common</div>
-            <div class="q8__btn small error_small">error</div>
-            <div class="q8__btn small disabled_small">disabled</div>
-            <div class="q8__btn small shadow_small">shadow</div>
+            <div class="q8__btn small common_btn">common</div>
+            <div class="q8__btn small error_btn">error</div>
+            <div class="q8__btn small disabled_btn">disabled</div>
+            <div class="q8__btn small shadow_btn">shadow</div>
           </div>
 
           <div class="q8 q8--btn">
             <p class="q8__title">ー middle ー</p>
-            <div class="q8__btn middle common_middle">common</div>
-            <div class="q8__btn middle error_middle">error</div>
-            <div class="q8__btn middle disabled_middle">disabled</div>
-            <div class="q8__btn middle shadow_middle">shadow</div>
+            <div class="q8__btn middle common_btn">common</div>
+            <div class="q8__btn middle error_btn">error</div>
+            <div class="q8__btn middle disabled_btn">disabled</div>
+            <div class="q8__btn middle shadow_btn">shadow</div>
           </div>
 
           <div class="q8 q8--btn">
             <p class="q8__title">ー large ー</p>
-            <div class="q8__btn large common_large">common</div>
-            <div class="q8__btn large error_large">error</div>
-            <div class="q8__btn large disabled_large">disabled</div>
-            <div class="q8__btn large shadow_large">shadow</div>
+            <div class="q8__btn large common_btn">common</div>
+            <div class="q8__btn large error_btn">error</div>
+            <div class="q8__btn large disabled_btn">disabled</div>
+            <div class="q8__btn large shadow_btn">shadow</div>
           </div>
           <!-- 回答はここに書いてね -->
         </div>
