--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -103,7 +103,7 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
+          <div class="q6 q6--around is-flex">
             <p>flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
